fix: z-index save btn

--- a/src/writeData/subscriptions/components/ParsingForm.scss
+++ b/src/writeData/subscriptions/components/ParsingForm.scss
@@ -48,7 +48,7 @@
     border-radius: 2px;
     white-space: nowrap;
     position: relative;
-    z-index: 1;
+    z-index: 0;
     display: inline-flex;
     justify-content: center;
     align-items: center;
